--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   <section id="footer">
     <div class="footer container">
       <div class="brand">
-        <h1><span>S</span>haif <span>A</span>rfan</h1>
+        <h1><span>PA</span>TIL<span>SA</span>NIKA</h1>
       </div>
       <h2>Your Complete Web Solution</h2>
       <div class="social-icon">
